Use FontAwesome icons in result messages (#1)

--- a/css/self-service-password.css
+++ b/css/self-service-password.css
@@ -18,6 +18,12 @@ img.logo {
   font-size: 20pt;
 }
 
-.result h2 {
-  font-size: 18pt;
+.result p {
+  font-size: 14pt;
 }
+
+.result i.fa {
+  font-size: 18pt;
+  margin-right: 10px;
+}
+
