Display background image (#11)

--- a/css/self-service-password.css
+++ b/css/self-service-password.css
@@ -2,12 +2,17 @@
 
 html, body {
   background: #eee;
-  padding-top: 10px;
+  padding-top: 20px;
   font-size: 12pt;
 }
 
 .panel, .alert {
   box-shadow:0 3px 6px rgba(0,0,0,.25);
+}
+
+.panel {
+  background-color:#fff;
+  background-color:rgba(255,255,255,0.8);
 }
 
 img.logo {
