--- a/css/self-service-password.css
+++ b/css/self-service-password.css
@@ -6,7 +6,7 @@ html, body {
   font-size: 12pt;
 }
 
-.panel, .alert {
+.panel, .alert, .navbar-wrapper {
   box-shadow:0 3px 6px rgba(0,0,0,.25);
 }
 
