--- a/templates/setquestions.twig
+++ b/templates/setquestions.twig
@@ -1,74 +1,78 @@
+{% extends 'layout.twig' %}
 
-<div class="result alert alert-{{ result|criticality }}">
-    <p><i class="fa fa-fw {{ result|fa_class }}" aria-hidden="true"></i> {{ result|trans }}</p>
-</div>
+{% block main %}
 
-{% if result != 'answerchanged' %}
-
-    {% if show_help %}
-        <div class="help alert alert-warning">
-            <p><i class="fa fa-fw fa-info-circle"></i> {{ 'setquestionshelp'|trans|raw }}</p>
-        </div>
-    {% endif %}
-
-    <div class="alert alert-info">
-        <form action="#" method="post" class="form-horizontal">
-            <div class="form-group">
-                <label for="login" class="col-sm-4 control-label">{{ 'login'|trans }}</label>
-                <div class="col-sm-8">
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="fa fa-fw fa-user"></i></span>
-                        <input type="text" name="login" id="login" value="{{ login }}" class="form-control" placeholder="{{ 'login'|trans }}" />
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="password" class="col-sm-4 control-label">{{ 'password'|trans }}</label>
-                <div class="col-sm-8">
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="fa fa-fw fa-lock"></i></span>
-                        <input type="password" name="password" id="password" class="form-control" placeholder="{{ 'password'|trans }}" />
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="question" class="col-sm-4 control-label">{{ 'question'|trans }}</label>
-                <div class="col-sm-8">
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="fa fa-fw fa-question"></i></span>
-                        <select name="question" id="question" class="form-control">
-                            {% for key,value in questions %}
-                                <option value="{{ key }}">{{ value }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="answer" class="col-sm-4 control-label">{{ 'answer'|trans }}</label>
-                <div class="col-sm-8">
-                    <div class="input-group">
-                        <span class="input-group-addon"><i class="fa fa-fw fa-pencil"></i></span>
-                        <input type="text" name="answer" id="answer" class="form-control" placeholder="{{ 'answer'|trans }}" />
-                    </div>
-                </div>
-            </div>
-            {% if use_recaptcha %}
-                <div class="form-group">
-                    <div class="col-sm-offset-4 col-sm-8">
-                        <div class="g-recaptcha" data-sitekey="{{ recaptcha_publickey }}" data-theme="{{ recaptcha_theme }}" data-type="{{ recaptcha_type }}" data-size="{{ recaptcha_size }}"></div>
-                        <script type="text/javascript" src="https://www.google.com/recaptcha/api.js?hl={{ lang }}"></script>
-                    </div>
-                </div>
-            {% endif %}
-            <div class="form-group">
-                <div class="col-sm-offset-4 col-sm-8">
-                    <button type="submit" class="btn btn-success">
-                        <i class="fa fa-fw fa-check-square-o"></i> {{ 'submit'|trans }}
-                    </button>
-                </div>
-            </div>
-        </form>
+    <div class="result alert alert-{{ result|criticality }}">
+        <p><i class="fa fa-fw {{ result|fa_class }}" aria-hidden="true"></i> {{ result|trans }}</p>
     </div>
 
-{% endif %}
+    {% if result != 'answerchanged' %}
+
+        {% if show_help %}
+            <div class="help alert alert-warning">
+                <p><i class="fa fa-fw fa-info-circle"></i> {{ 'setquestionshelp'|trans|raw }}</p>
+            </div>
+        {% endif %}
+
+        <div class="alert alert-info">
+            <form action="#" method="post" class="form-horizontal">
+                <div class="form-group">
+                    <label for="login" class="col-sm-4 control-label">{{ 'login'|trans }}</label>
+                    <div class="col-sm-8">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-fw fa-user"></i></span>
+                            <input type="text" name="login" id="login" value="{{ login }}" class="form-control" placeholder="{{ 'login'|trans }}" />
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="password" class="col-sm-4 control-label">{{ 'password'|trans }}</label>
+                    <div class="col-sm-8">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-fw fa-lock"></i></span>
+                            <input type="password" name="password" id="password" class="form-control" placeholder="{{ 'password'|trans }}" />
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="question" class="col-sm-4 control-label">{{ 'question'|trans }}</label>
+                    <div class="col-sm-8">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-fw fa-question"></i></span>
+                            <select name="question" id="question" class="form-control">
+                                {% for key,value in questions %}
+                                    <option value="{{ key }}">{{ value }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="answer" class="col-sm-4 control-label">{{ 'answer'|trans }}</label>
+                    <div class="col-sm-8">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-fw fa-pencil"></i></span>
+                            <input type="text" name="answer" id="answer" class="form-control" placeholder="{{ 'answer'|trans }}" />
+                        </div>
+                    </div>
+                </div>
+                {% if use_recaptcha %}
+                    <div class="form-group">
+                        <div class="col-sm-offset-4 col-sm-8">
+                            <div class="g-recaptcha" data-sitekey="{{ recaptcha_publickey }}" data-theme="{{ recaptcha_theme }}" data-type="{{ recaptcha_type }}" data-size="{{ recaptcha_size }}"></div>
+                            <script type="text/javascript" src="https://www.google.com/recaptcha/api.js?hl={{ lang }}"></script>
+                        </div>
+                    </div>
+                {% endif %}
+                <div class="form-group">
+                    <div class="col-sm-offset-4 col-sm-8">
+                        <button type="submit" class="btn btn-success">
+                            <i class="fa fa-fw fa-check-square-o"></i> {{ 'submit'|trans }}
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>
+
+    {% endif %}
+{% endblock %}
