--- a/templates/change.twig
+++ b/templates/change.twig
@@ -1,9 +1,9 @@
 {% extends 'layout.twig' %}
 
+{% import 'forms.twig' as forms %}
+
 {% block main %}
-    <div class="result alert alert-{{ result|criticality }}">
-        <p><i class="fa fa-fw {{ result|fa_class }}" aria-hidden="true"></i> {{ result|trans }}</p>
-    </div>
+    {{ parent() }}
 
     {% if result == 'passwordchanged' %}
         {% if has_password_changed_extra_message %}
@@ -38,64 +38,19 @@
 
         <div class="alert alert-info">
             <form action="#" method="post" class="form-horizontal">
-                <div class="form-group">
-                    <label for="login" class="col-sm-4 control-label">{{ 'login'|trans }}</label>
-                    <div class="col-sm-8">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-fw fa-user"></i></span>
-                            <input type="text" name="login" id="login" value="{{ login }}" class="form-control" placeholder="{{ 'login'|trans }}" />
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="oldpassword" class="col-sm-4 control-label">{{ 'oldpassword'|trans }}</label>
-                    <div class="col-sm-8">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-fw fa-lock"></i></span>
-                            <input type="password" name="oldpassword" id="oldpassword" class="form-control" placeholder="{{ 'oldpassword'|trans }}" />
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="newpassword" class="col-sm-4 control-label">{{ 'newpassword'|trans }}</label>
-                    <div class="col-sm-8">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-fw fa-lock"></i></span>
-                            <input type="password" name="newpassword" id="newpassword" class="form-control" placeholder="{{ 'newpassword'|trans }}" />
-                        </div>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label for="confirmpassword" class="col-sm-4 control-label">{{ 'confirmpassword'|trans }}</label>
-                    <div class="col-sm-8">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-fw fa-lock"></i></span>
-                            <input type="password" name="confirmpassword" id="confirmpassword" class="form-control" placeholder="{{ 'confirmpassword'|trans }}" />
-                        </div>
-                    </div>
-                </div>
+                {{ forms.row_input_text('login', 'login', 'user', 'login', login) }}
+                {{ forms.row_input_password('oldpassword', 'oldpassword', 'lock', 'oldpassword') }}
+                {{ forms.row_input_password('newpassword', 'newpassword', 'lock', 'newpassword') }}
+                {{ forms.row_input_password('confirmpassword', 'confirmpassword', 'lock', 'confirmpassword') }}
                 {% if use_recaptcha %}
-                    <div class="form-group">
-                        <div class="col-sm-offset-4 col-sm-8">
-                            <div class="g-recaptcha" data-sitekey="{{ recaptcha_publickey }}" data-theme="{{ recaptcha_theme }}" data-type="{{ recaptcha_type }}" data-size="{{ recaptcha_size }}"></div>
-                            <script type="text/javascript" src="https://www.google.com/recaptcha/api.js?hl={{ lang }}"></script>
-                        </div>
-                    </div>
+                    {{ forms.row_recaptcha(recaptcha_publickey, recaptcha_theme, recaptcha_type, recaptcha_size, lang) }}
                 {% endif %}
-                <div class="form-group">
-                    <div class="col-sm-offset-4 col-sm-8">
-                        <button type="submit" class="btn btn-success">
-                            <i class="fa fa-fw fa-check-square-o"></i> {{ 'submit'|trans }}
-                        </button>
-                    </div>
-                </div>
+                {{ forms.row_button_submit() }}
             </form>
         </div>
 
         {% if show_policy and pwd_show_policy_pos == 'below' %}
             {% include 'policy.twig' with {'config': pwd_policy_config} %}
         {% endif %}
-
     {% endif %}
-
 {% endblock %}
