--- a/templates/sendsms.twig
+++ b/templates/sendsms.twig
@@ -1,101 +1,42 @@
 {% extends 'layout.twig' %}
 
+{% import 'forms.twig' as forms %}
+
 {% block main %}
-    <div class="result alert alert-{{ result|criticality }}">
-        <p><i class="fa fa-fw {{ result|fa_class }}" aria-hidden="true"></i> {{ result|trans }}</p>
-    </div>
+    {{ parent() }}
 
     {% if result == 'smsuserfound' %}
-
         <div class="alert alert-info">
             <form action="#" method="post" class="form-horizontal">
-                <div class="form-group">
-                    <label class="col-sm-4 control-label">{{ 'userfullname'|trans }}</label>
-                    <div class="col-sm-8">
-                        <p class="form-control-static">{{ displayname[0] }}</p>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-4 control-label">{{ 'login'|trans }}</label>
-                    <div class="col-sm-8">
-                        <p class="form-control-static">{{ login }}</p>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="col-sm-4 control-label">{{ 'sms'|trans }}</label>
-                    <div class="col-sm-8">
-                        <p class="form-control-static">{{ sms }}</p>
-                    </div>
-                </div>
                 <input type="hidden" name="encrypted_sms_login" value="{{ encrypted_sms_login }}" />
-                <div class="form-group">
-                    <div class="col-sm-offset-4 col-sm-8">
-                        <button type="submit" class="btn btn-success">
-                            <i class="fa fa-fw fa-check-square-o"></i> {{ 'submit'|trans }}
-                        </button>
-                    </div>
-                </div>
+                {{ forms.row_static_text('userfullname', displayname[0]) }}
+                {{ forms.row_static_text('login', login) }}
+                {{ forms.row_static_text('sms', sms) }}
+                {{ forms.row_button_submit() }}
             </form>
         </div>
     {% elseif result == 'smssent' or result == 'tokenattempts' %}
         <div class="alert alert-info">
             <form action="#" method="post" class="form-horizontal">
-                <div class="form-group">
-                    <label for="smstoken" class="col-sm-4 control-label">{{ 'smstoken'|trans }}</label>
-                    <div class="col-sm-8">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-fw fa-key"></i></span>
-                            <input type="text" name="smstoken" id="smstoken" class="form-control" placeholder="{{ 'smstoken'|trans }}" />
-                        </div>
-                    </div>
-                </div>
                 <input type="hidden" name="token" value="{{ token }}" />
-                <div class="form-group">
-                    <div class="col-sm-offset-4 col-sm-8">
-                        <button type="submit" class="btn btn-success">
-                            <i class="fa fa-fw fa-check-square-o"></i> {{ 'submit'|trans }}
-                        </button>
-                    </div>
-                </div>
+                {{ forms.row_input_text('smstoken', 'smstoken', 'key', 'smstoken') }}
+                {{ forms.row_button_submit() }}
             </form>
         </div>
-
     {% elseif result != 'smscrypttokensrequired' %}
-
         {% if show_help %}
             <div class="help alert alert-warning">
                 <p><i class="fa fa-fw fa-info-circle"></i> {{ 'sendsmshelp'|trans|raw }}</p>
             </div>
         {% endif %}
-
         <div class="alert alert-info">
             <form action="#" method="post" class="form-horizontal">
-                <div class="form-group">
-                    <label for="login" class="col-sm-4 control-label">{{ 'login'|trans }}</label>
-                    <div class="col-sm-8">
-                        <div class="input-group">
-                            <span class="input-group-addon"><i class="fa fa-fw fa-user"></i></span>
-                            <input type="text" name="login" id="login" value="{{ login }}" class="form-control" placeholder="{{ 'login'|trans }}" />
-                        </div>
-                    </div>
-                </div>
+                {{ forms.row_input_text('login', 'login', 'user', 'login', login) }}
                 {% if use_recaptcha %}
-                    <div class="form-group">
-                        <div class="col-sm-offset-4 col-sm-8">
-                            <div class="g-recaptcha" data-sitekey="{{ recaptcha_publickey }}" data-theme="{{ recaptcha_theme }}" data-type="{{ recaptcha_type }}" data-size="{{ recaptcha_size }}"></div>
-                            <script type="text/javascript" src="https://www.google.com/recaptcha/api.js?hl={{ lang }}"></script>
-                        </div>
-                    </div>
+                    {{ forms.row_recaptcha(recaptcha_publickey, recaptcha_theme, recaptcha_type, recaptcha_size, lang) }}
                 {% endif %}
-                <div class="form-group">
-                    <div class="col-sm-offset-4 col-sm-8">
-                        <button type="submit" class="btn btn-success">
-                            <i class="fa fa-fw fa-search"></i> {{ 'getuser'|trans }}
-                        </button>
-                    </div>
-                </div>
+                {{ forms.row_button_submit('getuser', 'search') }}
             </form>
         </div>
-
     {% endif %}
 {% endblock %}
