--- a/templates/change.twig
+++ b/templates/change.twig
@@ -5,13 +5,7 @@
 {% block main %}
     {{ parent() }}
 
-    {% if result == 'passwordchanged' %}
-        {% if has_password_changed_extra_message %}
-            <div class="result alert alert-success">
-                <p><i class="fa fa-fw fa-check-square" aria-hidden="true"></i> {{ 'passwordchangedextramessage'|trans|raw }}</p>
-            </div>
-        {% endif %}
-    {% else %}
+    {% if result != 'passwordchanged' %}
         {% if show_help %}
             <div class="help alert alert-warning">
                 <p><i class="fa fa-fw fa-info-circle"></i> {{ 'changehelp'|trans|raw }}</p>
@@ -38,6 +32,7 @@
 
         <div class="alert alert-info">
             <form action="#" method="post" class="form-horizontal">
+                {# reminder form input parameters : id, label, icon, text, default value #}
                 {{ forms.row_input_text('login', 'login', 'user', 'login', login) }}
                 {{ forms.row_input_password('oldpassword', 'oldpassword', 'lock', 'oldpassword') }}
                 {{ forms.row_input_password('newpassword', 'newpassword', 'lock', 'newpassword') }}
@@ -51,6 +46,12 @@
 
         {% if show_policy and pwd_show_policy_pos == 'below' %}
             {% include 'policy.twig' with {'config': pwd_policy_config} %}
+        {% endif %}
+    {% else %}
+        {% if has_password_changed_extra_message %}
+            <div class="result alert alert-success">
+                <p><i class="fa fa-fw fa-check-square" aria-hidden="true"></i> {{ 'passwordchangedextramessage'|trans|raw }}</p>
+            </div>
         {% endif %}
     {% endif %}
 {% endblock %}
