--- a/templates/sendtoken.twig
+++ b/templates/sendtoken.twig
@@ -5,6 +5,7 @@
 {% block main %}
     {{ parent() }}
 
+    {# Show the form unless token is already send. #}
     {% if result != 'tokensent' %}
         {% if show_help %}
             <div class="help alert alert-warning">
