Refactor controllers rendering methods

--- a/templates/resetbyquestions.twig
+++ b/templates/resetbyquestions.twig
@@ -12,7 +12,7 @@
             </div>
         {% endif %}
 
-        {% if show_policy and pwd_show_policy_pos == 'above' %}
+        {% if show_policy_for(result) and pwd_show_policy_pos == 'above' %}
             {% include 'policy.twig' with {'config': pwd_policy_config} %}
         {% endif %}
 
@@ -30,7 +30,7 @@
             </form>
         </div>
 
-        {% if show_policy and pwd_show_policy_pos == 'below' %}
+        {% if show_policy_for(result) and pwd_show_policy_pos == 'below' %}
             {% include 'policy.twig' with {'config': pwd_policy_config} %}
         {% endif %}
     {% endif %}
