--- a/templates/change.twig
+++ b/templates/change.twig
@@ -26,7 +26,7 @@
             </div>
         {% endif %}
 
-        {% if show_policy and pwd_show_policy_pos == 'above' %}
+        {% if show_policy_for(result) and pwd_show_policy_pos == 'above' %}
             {% include 'policy.twig' with {'config': pwd_policy_config} %}
         {% endif %}
 
@@ -44,7 +44,7 @@
             </form>
         </div>
 
-        {% if show_policy and pwd_show_policy_pos == 'below' %}
+        {% if show_policy_for(result) and pwd_show_policy_pos == 'below' %}
             {% include 'policy.twig' with {'config': pwd_policy_config} %}
         {% endif %}
     {% else %}
