Use 'sendtokenhelpnomail' when LDAP mail address is on
Display the translated 'sendtokenhelpnomail' message
on the sendtoken page when the $mail_address_use_ldap
configuration parameter is set to true.

--- a/templates/sendtoken.twig
+++ b/templates/sendtoken.twig
@@ -9,7 +9,14 @@
     {% if result != 'tokensent' %}
         {% if show_help %}
             <div class="help alert alert-warning">
-                <p><i class="fa fa-fw fa-info-circle"></i> {{ 'sendtokenhelp'|trans|raw }}</p>
+                <p>
+                    <i class="fa fa-fw fa-info-circle"></i>
+                    {% if mail_address_use_ldap %}
+                        {{ 'sendtokenhelpnomail'|trans|raw }}
+                    {% else %}
+                        {{ 'sendtokenhelp'|trans|raw }}
+                    {% endif %}
+                </p>
             </div>
         {% endif %}
         <div class="alert alert-info">
