Added TOTP feature
Now there's a new option (disabled by default) to create a new
password, based on the TOTP module for openldap, that the user
must have installed and configured
https://github.com/openldap/openldap/tree/master/contrib/slapd-modules/passwd/totp

To get the new password, the user must reset it by "resetbytoken" in
the new menu option, and after click the link, the user will obtain
a QR code that must scan with an app (freeOTP, for example) before
submit the form.

--- a/templates/change.twig
+++ b/templates/change.twig
@@ -21,6 +21,7 @@
                         {% if use_tokens    %}<li>{{ 'changehelptoken'|trans|raw }}</li>{% endif %}
                         {% if use_sms       %}<li>{{ 'changehelpsms'|trans|raw }}</li>{% endif %}
                         {% if change_sshkey %}<li>{{ 'changehelpsshkey'|trans|raw }}</li>{% endif %}
+                        {% if use_totp      %}<li>{{ 'changehelptotp'|trans|raw }}</li>{% endif %}
                     </ul>
                 {% endif %}
             </div>
