--- a/templates/changesshkey.twig
+++ b/templates/changesshkey.twig
@@ -5,7 +5,7 @@
 {% block main %}
     {{ parent() }}
 
-    {% if result != 'sshkeychanged' %}
+    {% if result != "passwordchanged" %}
         {% if show_help %}
             <div class="help alert alert-warning">
                 <p><i class="fa fa-fw fa-info-circle"></i> {{ 'changesshkeyhelp'|trans|raw }}</p>
