--- a/templates/changesshkey.twig
+++ b/templates/changesshkey.twig
@@ -1,9 +1,9 @@
 {% extends 'layout.twig' %}
 
-{% import 'forms.twig' as forms %}
-
 {% block main %}
-    {{ parent() }}
+    <div class="result alert alert-{{ result|criticality }}">
+        <p><i class="fa fa-fw {{ result|fa_class }}" aria-hidden="true"></i> {{ result|trans }}</p>
+    </div>
 
     {% if result != "passwordchanged" %}
         {% if show_help %}
@@ -14,13 +14,48 @@
 
         <div class="alert alert-info">
             <form action="#" method="post" class="form-horizontal">
-                {{ forms.row_input_text('login', 'login', 'user', 'login', login) }}
-                {{ forms.row_input_password('password', 'password', 'lock', 'password') }}
-                {{ forms.row_input_textarea('sshkey', 'sshkey', 'terminal', 'sshkey') }}
+                <div class="form-group">
+                    <label for="login" class="col-sm-4 control-label">{{ 'login'|trans }}</label>
+                    <div class="col-sm-8">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-fw fa-user"></i></span>
+                            <input type="text" name="login" id="login" value="{{ login }}" class="form-control" placeholder="{{ 'login'|trans }}" />
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="password" class="col-sm-4 control-label">{{ 'password'|trans }}</label>
+                    <div class="col-sm-8">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-fw fa-lock"></i></span>
+                            <input type="password" name="password" id="password" class="form-control" placeholder="{{ 'password'|trans }}" />
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label for="sshkey" class="col-sm-4 control-label">{{ 'sshkey'|trans }}</label>
+                    <div class="col-sm-8">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-fw fa-terminal"></i></span>
+                            <textarea type="text" name="sshkey" id="sshkey" class="form-control" rows="2" placeholder="{{ 'sshkey'|trans }}"></textarea>
+                        </div>
+                    </div>
+                </div>
                 {% if use_recaptcha %}
-                    {{ forms.row_recaptcha(recaptcha_publickey, recaptcha_theme, recaptcha_type, recaptcha_size, lang) }}
+                    <div class="form-group">
+                        <div class="col-sm-offset-4 col-sm-8">
+                            <div class="g-recaptcha" data-sitekey="{{ recaptcha_publickey }}" data-theme="{{ recaptcha_theme }}" data-type="{{ recaptcha_type }}" data-size="{{ recaptcha_size }}"></div>
+                            <script type="text/javascript" src="https://www.google.com/recaptcha/api.js?hl={{ lang }}"></script>
+                        </div>
+                    </div>
                 {% endif %}
-                {{ forms.row_button_submit() }}
+                <div class="form-group">
+                    <div class="col-sm-offset-4 col-sm-8">
+                        <button type="submit" class="btn btn-success">
+                            <i class="fa fa-fw fa-check-square-o"></i> {{ 'submit'|trans }}
+                        </button>
+                    </div>
+                </div>
             </form>
         </div>
     {% endif %}
