--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -1,28 +1,24 @@
 <html lang="{{ lang }}">
 <head>
-{% block head %}
-    <title>{% block title %}{{ 'title'|trans }}{% endblock %}</title>
+    <title>{{ 'title'|trans }}</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="LDAP Tool Box" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/self-service-password.css" />
     <link href="images/favicon.ico" rel="icon" type="image/x-icon" />
     <link href="images/favicon.ico" rel="shortcut icon" />
-    {% block stylesheets %}
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/self-service-password.css" />
-        {% if background_image is not empty %}
-            <style>
-                html, body {
-                    background: url("{{ background_image }}") no-repeat center fixed;
-                    background-size: cover;
-                }
-            </style>
-        {% endif %}
-    {% endblock %}
-{% endblock %}
+    {% if background_image is not empty %}
+        <style>
+            html, body {
+                background: url("{{ background_image }}") no-repeat center fixed;
+                background-size: cover;
+            }
+        </style>
+    {% endif %}
 </head>
 <body>
 <div class="container">
@@ -55,21 +51,25 @@
                         <p><i class="fa fa-fw {{ check_result|fa_class }}" aria-hidden="true"></i> {{ check_result|trans }}</p>
                     </div>
                 {% endfor %}
-            {% else %}
-                {% block main %}
-                    <div class="result alert alert-{{ result|criticality }}">
-                        <p><i class="fa fa-fw {{ result|fa_class }}" aria-hidden="true"></i> {{ result|trans }}</p>
-                    </div>
-                {% endblock %}
             {% endif %}
+
+            {% block main %}
+            {% endblock %}
         </div>
     </div>
 </div>
 
-{% block javascripts %}
-    <script src="js/jquery-1.10.2.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/self-service-password.js"></script>
-{% endblock %}
+<script src="js/jquery-1.10.2.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script>
+    $(document).ready(function(){
+        // Menu links popovers
+        $('[data-toggle="menu-popover"]').popover({
+            trigger: 'hover',
+            placement: 'bottom',
+            container: 'body' // Allows the popover to be larger than the menu button
+        });
+    });
+</script>
 </body>
 </html>
