--- a/templates/sendtoken.twig
+++ b/templates/sendtoken.twig
@@ -1,11 +1,12 @@
 {% extends 'layout.twig' %}
 
-{% import 'forms.twig' as forms %}
-
 {% block main %}
-    {{ parent() }}
+    <div class="result alert alert-{{ result|criticality }}">
+        <p><i class="fa fa-fw {{ result|fa_class }}" aria-hidden="true"></i> {{ result|trans }}</p>
+    </div>
 
     {% if result != 'tokensent' %}
+
         {% if show_help %}
             <div class="help alert alert-warning">
                 <p>
@@ -18,17 +19,46 @@
                 </p>
             </div>
         {% endif %}
+
         <div class="alert alert-info">
             <form action="#" method="post" class="form-horizontal">
-                {{ forms.row_input_text('login', 'login', 'user', 'login', login) }}
+                <div class="form-group">
+                    <label for="login" class="col-sm-4 control-label">{{ 'login'|trans }}</label>
+                    <div class="col-sm-8">
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa fa-fw fa-user"></i></span>
+                            <input type="text" name="login" id="login" value="{{ login }}" class="form-control" placeholder="{{ 'login'|trans }}" />
+                        </div>
+                    </div>
+                </div>
                 {% if not mail_address_use_ldap %}
-                    {{ forms.row_input_email('mail', 'mail', 'envelope-o', 'mail') }}
+                    <div class="form-group">
+                        <label for="mail" class="col-sm-4 control-label">{{ 'mail'|trans }}</label>
+                        <div class="col-sm-8">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="fa fa-fw fa-envelope-o"></i></span>
+                                <input type="email" name="mail" id="mail" class="form-control" placeholder="{{ 'mail'|trans }}" />
+                            </div>
+                        </div>
+                    </div>
                 {% endif %}
                 {% if use_recaptcha %}
-                    {{ forms.row_recaptcha(recaptcha_publickey, recaptcha_theme, recaptcha_type, recaptcha_size, lang) }}
+                    <div class="form-group">
+                        <div class="col-sm-offset-4 col-sm-8">
+                            <div class="g-recaptcha" data-sitekey="{{ recaptcha_publickey }}" data-theme="{{ recaptcha_theme }}" data-type="{{ recaptcha_type }}" data-size="{{ recaptcha_size }}"></div>
+                            <script type="text/javascript" src="https://www.google.com/recaptcha/api.js?hl={{ lang }}"></script>
+                        </div>
+                    </div>
                 {% endif %}
-                {{ forms.row_button_submit() }}
+                <div class="form-group">
+                    <div class="col-sm-offset-4 col-sm-8">
+                        <button type="submit" class="btn btn-success">
+                            <i class="fa fa-fw fa-check-square-o"></i> {{ 'submit'|trans }}
+                        </button>
+                    </div>
+                </div>
             </form>
         </div>
+
     {% endif %}
 {% endblock %}
