Remove unused libraries

--- a/htdocs/css/self-service-password.css
+++ b/htdocs/css/self-service-password.css
@@ -1,4 +1,4 @@
-/* CSS for LDAP Tool Box White Pages */
+/* CSS for LDAP Tool Box Self Service Password */
 
 html, body {
   background: #eee;
@@ -41,28 +41,6 @@ img.menu-logo {
   font-weight: normal;
 }
 
-table.dataTable thead .sorting::after,
-table.dataTable thead .sorting_asc::after,
-table.dataTable thead .sorting_desc::after,
-table.dataTable thead .sorting_asc_disabled::after,
-table.dataTable thead .sorting_desc_disabled::after {
-  position: static;
-  display:  inline;
-  margin-left: 8px;
-}
-
-table.dataTable a.link-email:hover::after {
-  font: normal normal normal 14px/1 FontAwesome;
-  margin-left: 0.5em;
-  content: "\f003";
-}
-
-table.dataTable a.link-phone:hover::after {
-  font: normal normal normal 14px/1 FontAwesome;
-  margin-left: 0.5em;
-  content: "\f095";
-}
-
 div#footer {
   position:fixed;
   bottom:0;
@@ -85,20 +63,6 @@ div#footer {
 
   a[href]:after {
     content: none;
-  }
-
-  .row.ft-head,
-  .dataTables_length,
-  .dataTables_filter,
-  .dataTables_paginate,
-/*.dataTables_info,*/
-  .dt-buttons,
-  table.dataTable thead .sorting::after,
-  table.dataTable thead .sorting_asc::after,
-  table.dataTable thead .sorting_desc::after,
-  table.dataTable thead .sorting_asc_disabled::after,
-  table.dataTable thead .sorting_desc_disabled::after {
-    display: none;
   }
 
 }
