fix: captcha misaligned in the mobile version

--- a/htdocs/css/self-service-password.css
+++ b/htdocs/css/self-service-password.css
@@ -6,6 +6,11 @@ html, body {
   font-size: 12pt;
 }
 
+.captcha {
+  padding-top: 0 !important;
+  margin-bottom: 5px !important;
+}
+
 a, a:hover {
   text-decoration: none;
 }
